--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         #copy {
             width: 36px;
             height: 36px;
-            background: url('copy.png') center center no-repeat;
+            background: url('copy.svg') center center no-repeat;
             background-size: 20px 20px;
             border: none;
             border-radius: 6px;
