defer for script and todos

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </main>
 
     <aside></aside>
-    <script src="main.js" async></script>
+    <script src="main.js" defer></script>
 </body>
 
 </html>
